--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:21.0.1'
     implementation "com.google.accompanist:accompanist-permissions:0.21.5-rc"
     implementation 'com.google.accompanist:accompanist-swiperefresh:0.21.5-rc'
+    implementation("androidx.core:core-splashscreen:1.0.0")
 
     implementation "androidx.compose.ui:ui-tooling:1.4.0-alpha05"
     debugImplementation "androidx.compose.ui:ui-tooling-preview:1.4.0-alpha05"
