--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,23 +48,29 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation "androidx.activity:activity-compose:1.6.1"
+    implementation "androidx.compose.material3:material3:1.1.0-alpha05"
+    implementation "androidx.compose.material:material:1.4.0-alpha05"
     implementation "androidx.compose.ui:ui:1.3.3"
-    implementation 'androidx.compose.material3:material3:1.1.0-alpha05'
-    implementation "androidx.compose.material:material:1.3.1"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
+    implementation "androidx.core:core-ktx:1.9.0"
+    implementation "androidx.core:core-splashscreen:1.0.0"
+    implementation "androidx.lifecycle:lifecycle-runtime-compose:2.6.0-alpha05"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.1"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
-    implementation 'androidx.activity:activity-compose:1.6.1'
     implementation "androidx.navigation:navigation-compose:2.6.0-alpha04"
-    implementation 'dev.burnoo:compose-remember-preference:0.3.4'
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
-    implementation 'com.squareup.moshi:moshi:1.8.0'
-    implementation 'com.squareup.moshi:moshi-adapters:1.8.0'
-    implementation 'com.google.android.gms:play-services-location:21.0.1'
+
     implementation "com.google.accompanist:accompanist-permissions:0.21.5-rc"
-    implementation 'com.google.accompanist:accompanist-swiperefresh:0.21.5-rc'
-    implementation("androidx.core:core-splashscreen:1.0.0")
+    implementation "com.google.android.gms:play-services-location:21.0.1"
+
+    implementation "com.squareup.moshi:moshi-adapters:1.8.0"
+    implementation "com.squareup.moshi:moshi:1.8.0"
+    implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+
+    implementation "dev.burnoo:compose-remember-preference:0.3.4"
+
+    implementation 'com.github.ajalt:timberkt:1.5.1'
+    implementation 'com.jakewharton.timber:timber:5.0.1'
 
     implementation "androidx.compose.ui:ui-tooling:1.4.0-alpha05"
     debugImplementation "androidx.compose.ui:ui-tooling-preview:1.4.0-alpha05"
