--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,17 +49,18 @@ android {
 
 dependencies {
     implementation "androidx.activity:activity-compose:1.6.1"
-    implementation "androidx.compose.material3:material3:1.1.0-alpha05"
-    implementation "androidx.compose.material:material:1.4.0-alpha05"
+    implementation "androidx.compose.material3:material3:1.1.0-alpha06"
+    implementation "androidx.compose.material:material:1.4.0-beta01"
     implementation "androidx.compose.ui:ui:1.3.3"
     implementation "androidx.core:core-ktx:1.9.0"
     implementation "androidx.core:core-splashscreen:1.0.0"
-    implementation "androidx.lifecycle:lifecycle-runtime-compose:2.6.0-alpha05"
+    implementation "androidx.lifecycle:lifecycle-runtime-compose:2.6.0-beta01"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.1"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
-    implementation "androidx.navigation:navigation-compose:2.6.0-alpha04"
+    implementation "androidx.navigation:navigation-compose:2.6.0-alpha05"
 
-    implementation "com.google.accompanist:accompanist-permissions:0.21.5-rc"
+    //noinspection GradleDependency breaking permissions changes, TODO handle them
+    implementation "com.google.accompanist:accompanist-permissions:0.24.1-alpha"
     implementation "com.google.android.gms:play-services-location:21.0.1"
 
     implementation "com.squareup.moshi:moshi-adapters:1.8.0"
@@ -72,6 +73,6 @@ dependencies {
     implementation 'com.github.ajalt:timberkt:1.5.1'
     implementation 'com.jakewharton.timber:timber:5.0.1'
 
-    implementation "androidx.compose.ui:ui-tooling:1.4.0-alpha05"
-    debugImplementation "androidx.compose.ui:ui-tooling-preview:1.4.0-alpha05"
+    implementation "androidx.compose.ui:ui-tooling:1.4.0-beta01"
+    debugImplementation "androidx.compose.ui:ui-tooling-preview:1.4.0-beta01"
 }
