--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-parcelize'
+    id 'org.jlleitschuh.gradle.ktlint'
 }
 
 android {
@@ -22,7 +23,7 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -75,4 +76,6 @@ dependencies {
 
     implementation "androidx.compose.ui:ui-tooling:1.4.0-beta01"
     debugImplementation "androidx.compose.ui:ui-tooling-preview:1.4.0-beta01"
+
+    ktlintRuleset "io.nlopez.compose.rules:ktlint:0.1.1"
 }
