--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,17 @@
 buildscript {
     ext {
-        compose_version = '1.4.0'
+        compose_version = '1.4.2'
     }
-}// Top-level build file where you can add configuration options common to all sub-projects/modules.
+}
+
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.4.1' apply false
     id 'com.android.library' version '7.4.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
+    id 'org.jetbrains.kotlin.android' version '1.8.10' apply false
+    id 'org.jlleitschuh.gradle.ktlint' version '11.1.0' apply false
 }
 
-task clean(type: Delete) {
+tasks.register('clean') {
     delete rootProject.buildDir
 }
