--- a/settings.gradle
+++ b/settings.gradle
@@ -5,6 +5,12 @@ pluginManagement {
         mavenCentral()
     }
 }
+
+plugins {
+    // See https://jmfayard.github.io/refreshVersions
+    id 'de.fayard.refreshVersions' version '0.51.0'
+}
+
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
