--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-parcelize'
     id 'org.jlleitschuh.gradle.ktlint'
+    id 'com.google.devtools.ksp'
 }
 
 android {
@@ -28,11 +29,11 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '11'
         freeCompilerArgs += "-Xopt-in=kotlin.RequiresOptIn"
     }
     buildFeatures {
@@ -66,6 +67,7 @@ dependencies {
 
     implementation Square.moshi.adapters
     implementation Square.moshi
+    ksp "com.squareup.moshi:moshi-kotlin-codegen:_"
     implementation Square.retrofit2.converter.moshi
     implementation Square.retrofit2
 
