--- a/versions.properties
+++ b/versions.properties
@@ -12,16 +12,7 @@ version.retrofit2=2.9.0
 ## unused
 version.org.jacoco..org.jacoco.ant=0.8.8
 
-version.moshi=1.8.0
-### available=1.9.0
-### available=1.9.1
-### available=1.9.2
-### available=1.9.3
-### available=1.10.0
-### available=1.11.0
-### available=1.12.0
-### available=1.13.0
-### available=1.14.0
+version.moshi=1.14.0
 
 version.kotlin=1.8.10
 ## # available=1.8.20-Beta
@@ -59,45 +50,41 @@ version.google.accompanist=0.24.1-alpha
 ##             # available=0.29.0-alpha
 ##             # available=0.29.1-alpha
 
-version.dev.burnoo..compose-remember-preference=0.3.4
-##                                  # available=0.3.5
-##                                  # available=0.3.6
-##                                  # available=1.0.0
+version.dev.burnoo..compose-remember-preference=1.0.0
 
 ## unused
 version.com.pinterest..ktlint=0.43.2
 
 version.com.github.ajalt..timberkt=1.5.1
 
-version.androidx.navigation=2.6.0-alpha05
+version.androidx.navigation=2.6.0-alpha06
 
-version.androidx.lifecycle=2.6.0-beta01
+version.androidx.lifecycle=2.6.0-rc01
 
 version.androidx.core-splashscreen=1.0.0
+##                     # available=1.1.0-alpha01
 
 version.androidx.core=1.9.0
 ##        # available=1.10.0-alpha01
 ##        # available=1.10.0-alpha02
+##        # available=1.10.0-beta01
 
-version.androidx.compose.ui=1.4.0-beta01
+version.androidx.compose.ui=1.4.0-beta02
 
-version.androidx.compose.material3=1.1.0-alpha06
+version.androidx.compose.material3=1.1.0-alpha07
 
-version.androidx.compose.material=1.4.0-beta01
+version.androidx.compose.material=1.4.0-beta02
 
 ## unused
 version.androidx.compose.compiler=1.4.2
 
-version.androidx.activity=1.6.1
-##            # available=1.7.0-alpha01
-##            # available=1.7.0-alpha02
-##            # available=1.7.0-alpha03
-##            # available=1.7.0-alpha04
-##            # available=1.7.0-beta01
+version.androidx.activity=1.7.0-beta02
 ##            # available=1.8.0-alpha01
 
-plugin.org.jlleitschuh.gradle.ktlint=11.1.0
-##                       # available=11.2.0
+plugin.org.jlleitschuh.gradle.ktlint=11.2.0
+
+plugin.com.google.devtools.ksp=1.8.10-1.0.9
+##                 # available=1.8.20-Beta-1.0.9
 
 ## unused
 plugin.android=7.4.1
