--- a/versions.properties
+++ b/versions.properties
@@ -7,6 +7,15 @@
 #### suppress inspection "SpellCheckingInspection" for whole file
 #### suppress inspection "UnusedProperty" for whole file
 
+## unused
+version.com.google.devtools.ksp..symbol-processing-cmdline=1.8.10-1.0.9
+
+## unused
+version.com.google.devtools.ksp..symbol-processing-api=1.8.10-1.0.9
+
+## unused
+version.com.google.devtools.ksp..symbol-processing=1.8.10-1.0.9
+
 version.retrofit2=2.9.0
 
 ## unused
@@ -75,8 +84,7 @@ version.androidx.compose.material3=1.1.0-alpha07
 
 version.androidx.compose.material=1.4.0-beta02
 
-## unused
-version.androidx.compose.compiler=1.4.2
+version.androidx.compose.compiler=1.4.3
 
 version.androidx.activity=1.7.0-beta02
 ##            # available=1.8.0-alpha01
