--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,7 +70,7 @@ dependencies {
 
     implementation Square.moshi.adapters
     implementation Square.moshi
-    ksp "com.squareup.moshi:moshi-kotlin-codegen:_"
+    ksp Square.moshi.kotlinCodegen
     implementation Square.retrofit2.converter.moshi
     implementation Square.retrofit2
 
