--- a/versions.properties
+++ b/versions.properties
@@ -22,13 +22,19 @@ version.retrofit2=2.9.0
 version.org.jacoco..org.jacoco.ant=0.8.8
 
 version.moshi=1.14.0
+### available=1.15.0
 
 version.kotlin=1.8.10
 ## # available=1.8.20-Beta
+## # available=1.8.20-RC
+## # available=1.8.20-RC2
+## # available=1.8.20
+## # available=1.8.21
+## # available=1.9.0-Beta
 
 version.jakewharton.timber=5.0.1
 
-version.io.nlopez.compose.rules..ktlint=0.1.2
+version.io.nlopez.compose.rules..ktlint=0.1.7
 
 version.google.android.play-services-location=21.0.1
 
@@ -58,41 +64,79 @@ version.google.accompanist=0.24.1-alpha
 ##             # available=0.28.0
 ##             # available=0.29.0-alpha
 ##             # available=0.29.1-alpha
+##             # available=0.29.2-rc
+##             # available=0.30.0
+##             # available=0.30.1
+##             # available=0.31.0-alpha
+##             # available=0.31.1-alpha
+##             # available=0.31.2-alpha
+##             # available=0.31.3-beta
 
-version.dev.burnoo..compose-remember-preference=1.0.0
+version.dev.burnoo..compose-remember-preference=1.0.1
 
 ## unused
 version.com.pinterest..ktlint=0.43.2
 
 version.com.github.ajalt..timberkt=1.5.1
 
-version.androidx.navigation=2.6.0-alpha06
+version.androidx.navigation=2.6.0-rc02
+##              # available=2.7.0-alpha01
 
-version.androidx.lifecycle=2.6.0-rc01
+version.androidx.lifecycle=2.6.1
 
-version.androidx.core-splashscreen=1.0.0
+version.androidx.core-splashscreen=1.0.1
 ##                     # available=1.1.0-alpha01
 
-version.androidx.core=1.9.0
-##        # available=1.10.0-alpha01
-##        # available=1.10.0-alpha02
-##        # available=1.10.0-beta01
+version.androidx.core=1.10.1
+##        # available=1.11.0-alpha01
+##        # available=1.11.0-alpha02
+##        # available=1.11.0-alpha03
+##        # available=1.11.0-alpha04
+##        # available=1.11.0-beta01
+##        # available=1.12.0-alpha01
+##        # available=1.12.0-alpha03
+##        # available=1.12.0-alpha04
 
-version.androidx.compose.ui=1.4.0-beta02
+version.androidx.compose.ui=1.4.3
+##              # available=1.5.0-alpha01
+##              # available=1.5.0-alpha02
+##              # available=1.5.0-alpha03
+##              # available=1.5.0-alpha04
+##              # available=1.5.0-beta01
 
-version.androidx.compose.material3=1.1.0-alpha07
+version.androidx.compose.material3=1.1.0
+##                     # available=1.2.0-alpha01
+##                     # available=1.2.0-alpha02
 
-version.androidx.compose.material=1.4.0-beta02
+version.androidx.compose.material=1.4.3
+##                    # available=1.5.0-alpha01
+##                    # available=1.5.0-alpha02
+##                    # available=1.5.0-alpha03
+##                    # available=1.5.0-alpha04
+##                    # available=1.5.0-beta01
 
 version.androidx.compose.compiler=1.4.3
+##                    # available=1.4.4
+##                    # available=1.4.5
+##                    # available=1.4.6
+##                    # available=1.4.7
 
-version.androidx.activity=1.7.0-beta02
+version.androidx.activity=1.7.2
 ##            # available=1.8.0-alpha01
+##            # available=1.8.0-alpha02
+##            # available=1.8.0-alpha03
+##            # available=1.8.0-alpha04
 
-plugin.org.jlleitschuh.gradle.ktlint=11.3.1
+plugin.org.jlleitschuh.gradle.ktlint=11.3.2
 
 plugin.com.google.devtools.ksp=1.8.10-1.0.9
 ##                 # available=1.8.20-Beta-1.0.9
+##                 # available=1.8.20-RC-1.0.9
+##                 # available=1.8.20-RC2-1.0.9
+##                 # available=1.8.20-1.0.10
+##                 # available=1.8.20-1.0.11
+##                 # available=1.8.21-1.0.11
+##                 # available=1.9.0-Beta-1.0.11
 
 ## unused
 plugin.android=7.4.2
