--- a/versions.properties
+++ b/versions.properties
@@ -16,6 +16,8 @@ version.com.google.devtools.ksp..symbol-processing-api=1.8.10-1.0.9
 ## unused
 version.com.google.devtools.ksp..symbol-processing=1.8.10-1.0.9
 
+version.org.jsoup..jsoup=1.16.1
+
 version.retrofit2=2.9.0
 
 ## unused
