--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,9 @@ buildscript {
     ext {
         compose_version = '_'
     }
+    dependencies {
+        classpath "io.nlopez.compose.rules:ktlint:_"
+    }
 }
 
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
@@ -9,7 +12,7 @@ plugins {
     id 'com.android.application' apply false
     id 'com.android.library' apply false
     id 'org.jetbrains.kotlin.android' apply false
-    id 'org.jlleitschuh.gradle.ktlint' apply false
+    id 'org.jmailen.kotlinter' apply false
 }
 
 tasks.register('clean') {
