--- a/versions.properties
+++ b/versions.properties
@@ -7,6 +7,8 @@
 #### suppress inspection "SpellCheckingInspection" for whole file
 #### suppress inspection "UnusedProperty" for whole file
 
+plugin.org.jmailen.kotlinter=3.15.0
+
 ## unused
 version.com.google.devtools.ksp..symbol-processing-cmdline=1.8.10-1.0.9
 
@@ -118,8 +120,6 @@ version.androidx.activity=1.7.2
 ##            # available=1.8.0-alpha02
 ##            # available=1.8.0-alpha03
 ##            # available=1.8.0-alpha04
-
-plugin.org.jlleitschuh.gradle.ktlint=11.3.2
 
 plugin.com.google.devtools.ksp=1.8.21-1.0.11
 ##                 # available=1.9.0-Beta-1.0.11
