--- a/versions.properties
+++ b/versions.properties
@@ -7,6 +7,8 @@
 #### suppress inspection "SpellCheckingInspection" for whole file
 #### suppress inspection "UnusedProperty" for whole file
 
+plugin.de.mannodermaus.android-junit5=1.9.3.0
+
 plugin.org.jmailen.kotlinter=3.15.0
 
 ## unused
@@ -14,6 +16,12 @@ version.com.google.devtools.ksp..symbol-processing-cmdline=1.8.10-1.0.9
 
 ## unused
 version.com.google.devtools.ksp..symbol-processing-api=1.8.10-1.0.9
+
+version.junit.jupiter=5.9.3
+
+version.com.google.truth.extensions..truth-java8-extension=1.1.4
+
+version.com.google.truth..truth=1.1.4
 
 ## unused
 version.com.google.devtools.ksp..symbol-processing=1.8.10-1.0.9
