--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ plugins {
     id 'com.android.library' apply false
     id 'org.jetbrains.kotlin.android' apply false
     id 'org.jmailen.kotlinter' apply false
+    id 'de.mannodermaus.android-junit5' apply false
 }
 
 tasks.register('clean') {
