--- a/versions.properties
+++ b/versions.properties
@@ -18,6 +18,7 @@ version.com.google.devtools.ksp..symbol-processing-cmdline=1.8.10-1.0.9
 version.com.google.devtools.ksp..symbol-processing-api=1.8.10-1.0.9
 
 version.junit.jupiter=5.9.3
+##        # available=5.10.0-M1
 
 version.com.google.truth.extensions..truth-java8-extension=1.1.4
 
