--- a/versions.properties
+++ b/versions.properties
@@ -7,7 +7,11 @@
 #### suppress inspection "SpellCheckingInspection" for whole file
 #### suppress inspection "UnusedProperty" for whole file
 
+plugin.app.cash.licensee=1.7.0
+
 plugin.de.mannodermaus.android-junit5=1.9.3.0
+
+version.app.cash.licensee=1.7.0
 
 plugin.org.jmailen.kotlinter=3.15.0
 
