--- a/versions.properties
+++ b/versions.properties
@@ -6,6 +6,8 @@
 ####
 #### suppress inspection "SpellCheckingInspection" for whole file
 #### suppress inspection "UnusedProperty" for whole file
+####
+#### NOTE: Some versions are filtered by the rejectVersionsIf predicate. See the settings.gradle.kts file.
 
 plugin.app.cash.licensee=1.7.0
 
@@ -22,11 +24,10 @@ version.com.google.devtools.ksp..symbol-processing-cmdline=1.8.10-1.0.9
 version.com.google.devtools.ksp..symbol-processing-api=1.8.10-1.0.9
 
 version.junit.jupiter=5.9.3
-##        # available=5.10.0-M1
 
-version.com.google.truth.extensions..truth-java8-extension=1.1.4
+version.com.google.truth.extensions..truth-java8-extension=1.1.5
 
-version.com.google.truth..truth=1.1.4
+version.com.google.truth..truth=1.1.5
 
 ## unused
 version.com.google.devtools.ksp..symbol-processing=1.8.10-1.0.9
@@ -41,47 +42,22 @@ version.org.jacoco..org.jacoco.ant=0.8.8
 version.moshi=1.15.0
 
 version.kotlin=1.8.21
-## # available=1.9.0-Beta
+## # available=1.8.22
 
 version.jakewharton.timber=5.0.1
 
-version.io.nlopez.compose.rules..ktlint=0.1.7
+version.io.nlopez.compose.rules..ktlint=0.1.10
 
 version.google.android.play-services-location=21.0.1
 
 version.google.accompanist=0.24.1-alpha
-##             # available=0.24.2-alpha
-##             # available=0.24.3-alpha
-##             # available=0.24.4-alpha
-##             # available=0.24.5-alpha
-##             # available=0.24.6-alpha
-##             # available=0.24.7-alpha
-##             # available=0.24.8-beta
-##             # available=0.24.9-beta
-##             # available=0.24.10-beta
-##             # available=0.24.11-rc
-##             # available=0.24.12-rc
-##             # available=0.24.13-rc
 ##             # available=0.25.0
 ##             # available=0.25.1
-##             # available=0.26.0-alpha
-##             # available=0.26.1-alpha
-##             # available=0.26.2-beta
-##             # available=0.26.3-beta
-##             # available=0.26.4-beta
-##             # available=0.26.5-rc
 ##             # available=0.27.0
 ##             # available=0.27.1
 ##             # available=0.28.0
-##             # available=0.29.0-alpha
-##             # available=0.29.1-alpha
-##             # available=0.29.2-rc
 ##             # available=0.30.0
 ##             # available=0.30.1
-##             # available=0.31.0-alpha
-##             # available=0.31.1-alpha
-##             # available=0.31.2-alpha
-##             # available=0.31.3-beta
 
 version.dev.burnoo..compose-remember-preference=1.0.1
 
@@ -90,52 +66,26 @@ version.com.pinterest..ktlint=0.43.2
 
 version.com.github.ajalt..timberkt=1.5.1
 
-version.androidx.navigation=2.6.0-rc02
-##              # available=2.7.0-alpha01
+version.androidx.navigation=2.6.0
 
 version.androidx.lifecycle=2.6.1
 
 version.androidx.core-splashscreen=1.0.1
-##                     # available=1.1.0-alpha01
 
 version.androidx.core=1.10.1
-##        # available=1.11.0-alpha01
-##        # available=1.11.0-alpha02
-##        # available=1.11.0-alpha03
-##        # available=1.11.0-alpha04
-##        # available=1.11.0-beta01
-##        # available=1.12.0-alpha01
-##        # available=1.12.0-alpha03
-##        # available=1.12.0-alpha04
 
 version.androidx.compose.ui=1.4.3
-##              # available=1.5.0-alpha01
-##              # available=1.5.0-alpha02
-##              # available=1.5.0-alpha03
-##              # available=1.5.0-alpha04
-##              # available=1.5.0-beta01
 
-version.androidx.compose.material3=1.1.0
-##                     # available=1.2.0-alpha01
-##                     # available=1.2.0-alpha02
+version.androidx.compose.material3=1.1.1
 
 version.androidx.compose.material=1.4.3
-##                    # available=1.5.0-alpha01
-##                    # available=1.5.0-alpha02
-##                    # available=1.5.0-alpha03
-##                    # available=1.5.0-alpha04
-##                    # available=1.5.0-beta01
 
 version.androidx.compose.compiler=1.4.7
 
 version.androidx.activity=1.7.2
-##            # available=1.8.0-alpha01
-##            # available=1.8.0-alpha02
-##            # available=1.8.0-alpha03
-##            # available=1.8.0-alpha04
 
 plugin.com.google.devtools.ksp=1.8.21-1.0.11
-##                 # available=1.9.0-Beta-1.0.11
+##                 # available=1.8.22-1.0.11
 
 ## unused
 plugin.android=8.0.2
