--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,7 @@ dependencies {
     implementation AndroidX.lifecycle.runtime.ktx
     implementation AndroidX.lifecycle.viewModelKtx
     implementation AndroidX.navigation.compose
+    implementation AndroidX.compose.material.icons.extended
 
     //noinspection GradleDependency breaking permissions changes, TODO handle them
     implementation Google.accompanist.permissions
