--- a/versions.properties
+++ b/versions.properties
@@ -15,7 +15,8 @@ plugin.de.mannodermaus.android-junit5=1.9.3.0
 
 version.app.cash.licensee=1.7.0
 
-plugin.org.jmailen.kotlinter=3.15.0
+plugin.org.jmailen.kotlinter=3.14.0
+##               # available=3.15.0
 
 ## unused
 version.com.google.devtools.ksp..symbol-processing-cmdline=1.8.10-1.0.9
