--- a/versions.properties
+++ b/versions.properties
@@ -11,13 +11,17 @@
 
 plugin.app.cash.licensee=1.9.0
 
+plugin.app.cash.paparazzi=1.3.2
+
 plugin.de.mannodermaus.android-junit5=1.10.0.0
 
 version.app.cash.licensee=1.9.0
 
+version.app.cash.paparazzi=1.3.2
+
 plugin.org.jmailen.kotlinter=4.2.0
 
-version.junit.jupiter=5.10.2
+version.junit.junit=4.13.2
 
 version.com.google.truth.extensions..truth-java8-extension=1.4.0
 
