--- a/versions.properties
+++ b/versions.properties
@@ -13,13 +13,32 @@ plugin.app.cash.licensee=1.9.0
 
 plugin.app.cash.paparazzi=1.3.2
 
+plugin.com.squareup.wire=4.9.6
+
 plugin.de.mannodermaus.android-junit5=1.10.0.0
 
 version.app.cash.licensee=1.9.0
 
 version.app.cash.paparazzi=1.3.2
 
+version.com.google.api.grpc..proto-google-common-protos=2.33.0
+
+## unused
+version.com.google.devtools.ksp..symbol-processing-cmdline=1.9.22-1.0.17
+
+## unused
+version.com.google.devtools.ksp..symbol-processing-api=1.9.22-1.0.17
+
+## unused
+version.com.google.devtools.ksp..symbol-processing=1.9.22-1.0.17
+
 plugin.org.jmailen.kotlinter=4.2.0
+
+version.com.google.protobuf..protobuf-java=3.25.2
+##                             # available=4.0.0-rc-1
+##                             # available=4.0.0-rc-2
+##                             # available=4.26.0-RC1
+##                             # available=4.26.0-RC2
 
 version.junit.junit=4.13.2
 
@@ -74,6 +93,8 @@ version.androidx.compose.ui=1.6.1
 version.androidx.compose.material3=1.2.0
 
 version.androidx.compose.material=1.6.1
+
+ version.wire=4.9.6
 
 version.androidx.compose.compiler=1.5.9
 
