--- a/versions.properties
+++ b/versions.properties
@@ -11,7 +11,7 @@
 
 plugin.app.cash.licensee=1.9.0
 
-plugin.app.cash.paparazzi=1.3.2
+plugin.app.cash.paparazzi=1.3.1-thumbnail-scale-5
 
 plugin.com.squareup.wire=4.9.6
 
@@ -19,7 +19,7 @@ plugin.de.mannodermaus.android-junit5=1.10.0.0
 
 version.app.cash.licensee=1.9.0
 
-version.app.cash.paparazzi=1.3.2
+version.app.cash.paparazzi=1.3.1-thumbnail-scale-5
 
 version.com.google.api.grpc..proto-google-common-protos=2.33.0
 
