--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -25,4 +25,4 @@ jobs:
     - name: Build
       uses: gradle/gradle-build-action@v3
       with:
-        arguments: build --scan
+        arguments: build --scan -PgithubUsername=amandeepg -PgithubPassword=${{ secrets.githubPassword }}
