--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -20,9 +20,9 @@ jobs:
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
-        java-version: '17'
-        distribution: 'temurin'
+        java-version: 17
+        distribution: temurin
+    - name: Setup Gradle
+      uses: gradle/actions/setup-gradle@v3
     - name: Build
-      uses: gradle/gradle-build-action@v3
-      with:
-        arguments: build --scan -PgithubUsername=amandeepg -PgithubPassword=${{ secrets.githubPassword }}
+      run: ./gradlew build --scan -PgithubUsername=amandeepg -PgithubPassword=${{ secrets.githubPassword }}
