--- a/versions.properties
+++ b/versions.properties
@@ -9,18 +9,20 @@
 ####
 #### NOTE: Some versions are filtered by the rejectVersionIf predicate. See the settings.gradle.kts file.
 
-plugin.app.cash.licensee=1.9.0
+plugin.app.cash.licensee=1.9.1
 
 plugin.app.cash.paparazzi=1.3.1-thumbnail-scale-5
-
-plugin.com.squareup.wire=4.9.6
+##            # available=1.3.2
+##            # available=1.3.3
 
 plugin.de.mannodermaus.android-junit5=1.10.0.0
 
-version.app.cash.licensee=1.9.0
+version.app.cash.licensee=1.9.1
 
+## unused
 version.app.cash.paparazzi=1.3.1-thumbnail-scale-5
 
+## unused
 version.com.google.api.grpc..proto-google-common-protos=2.33.0
 
 ## unused
@@ -34,6 +36,7 @@ version.com.google.devtools.ksp..symbol-processing=1.9.22-1.0.17
 
 plugin.org.jmailen.kotlinter=4.2.0
 
+## unused
 version.com.google.protobuf..protobuf-java=3.25.2
 ##                             # available=4.0.0-rc-1
 ##                             # available=4.0.0-rc-2
@@ -42,9 +45,9 @@ version.com.google.protobuf..protobuf-java=3.25.2
 
 version.junit.junit=4.13.2
 
-version.com.google.truth.extensions..truth-java8-extension=1.4.0
+version.com.google.truth.extensions..truth-java8-extension=1.4.2
 
-version.com.google.truth..truth=1.4.0
+version.com.google.truth..truth=1.4.2
 
 version.kotlinx.collections.immutable=0.3.7
 
@@ -88,19 +91,17 @@ version.androidx.core-splashscreen=1.0.1
 
 version.androidx.core=1.12.0
 
-version.androidx.compose.ui=1.6.1
+version.androidx.compose.ui=1.6.2
 
 version.androidx.compose.material3=1.2.0
 
-version.androidx.compose.material=1.6.1
+version.androidx.compose.material=1.6.2
 
- version.wire=4.9.6
-
-version.androidx.compose.compiler=1.5.9
+version.androidx.compose.compiler=1.5.10
 
 version.androidx.activity=1.8.2
 
-plugin.com.google.devtools.ksp=1.9.22-1.0.17
+plugin.com.google.devtools.ksp=1.9.22-1.0.18
 
 ## unused
 plugin.android=8.2.2
