--- a/.gitignore
+++ b/.gitignore
@@ -316,3 +316,5 @@ obj/
 !/gradle/wrapper/gradle-wrapper.jar
 
 # End of https://www.toptal.com/developers/gitignore/api/android,androidstudio,java,kotlin,intellij
+
+gradlew.bat
