--- a/versions.properties
+++ b/versions.properties
@@ -15,8 +15,6 @@ plugin.app.cash.paparazzi=1.3.1-thumbnail-scale-5
 ##            # available=1.3.2
 ##            # available=1.3.3
 
-plugin.de.mannodermaus.android-junit5=1.10.0.0
-
 version.app.cash.licensee=1.9.1
 
 ## unused
@@ -61,12 +59,13 @@ version.org.jacoco..org.jacoco.ant=0.8.8
 version.moshi=1.15.1
 
 version.kotlin=1.9.22
+## # available=1.9.23
 
 version.jakewharton.timber=5.0.1
 
-version.io.nlopez.compose.rules..ktlint=0.3.11
+version.io.nlopez.compose.rules..ktlint=0.3.12
 
-version.google.android.play-services-location=21.1.0
+version.google.android.play-services-location=21.2.0
 
 version.google.accompanist=0.24.1-alpha
 ##             # available=0.25.0
@@ -91,17 +90,18 @@ version.androidx.core-splashscreen=1.0.1
 
 version.androidx.core=1.12.0
 
-version.androidx.compose.ui=1.6.2
+version.androidx.compose.ui=1.6.3
 
-version.androidx.compose.material3=1.2.0
+version.androidx.compose.material3=1.2.1
 
-version.androidx.compose.material=1.6.2
+version.androidx.compose.material=1.6.3
 
 version.androidx.compose.compiler=1.5.10
 
 version.androidx.activity=1.8.2
 
 plugin.com.google.devtools.ksp=1.9.22-1.0.18
+##                 # available=1.9.23-1.0.19
 
 ## unused
 plugin.android=8.2.2
