--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,7 @@
+//file:noinspection DependencyNotationArgument
+//file:noinspection ConfigurationAvoidance
+import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
+
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
@@ -34,15 +38,17 @@ android {
         jvmToolchain(11)
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
         jvmTarget = '11'
         freeCompilerArgs += "-Xopt-in=kotlin.RequiresOptIn"
         freeCompilerArgs += "-P"
+        //noinspection GrDeprecatedAPIUsage
         freeCompilerArgs += "plugin:androidx.compose.compiler.plugins.kotlin:metricsDestination=" + project.buildDir.absolutePath + "/compose_compiler"
         freeCompilerArgs += "-P"
+        //noinspection GrDeprecatedAPIUsage
         freeCompilerArgs += "plugin:androidx.compose.compiler.plugins.kotlin:reportsDestination=" + project.buildDir.absolutePath + "/compose_compiler"
     }
 
@@ -61,6 +67,24 @@ android {
         unitTests.includeAndroidResources = true
     }
     namespace 'ca.amandeep.path'
+}
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
+}
+
+java {
+    sourceCompatibility JavaVersion.VERSION_17
+    targetCompatibility JavaVersion.VERSION_17
+}
+
+tasks.withType(KotlinCompile) {
+    //noinspection GrDeprecatedAPIUsage
+    kotlinOptions {
+        jvmTarget = '17'
+    }
 }
 
 dependencies {
