--- a/build.gradle
+++ b/build.gradle
@@ -10,12 +10,13 @@ buildscript {
 
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
+    id 'app.cash.licensee' apply false
+    id 'app.cash.paparazzi' apply false
     id 'com.android.application' apply false
     id 'com.android.library' apply false
     id 'org.jetbrains.kotlin.android' apply false
+    id 'org.jetbrains.kotlin.plugin.compose' apply false
     id 'org.jmailen.kotlinter' apply false
-    id 'app.cash.licensee' apply false
-    id 'app.cash.paparazzi' apply false
 }
 
 tasks.register('clean') {
