--- a/versions.properties
+++ b/versions.properties
@@ -9,25 +9,28 @@
 ####
 #### NOTE: Some versions are filtered by the rejectVersionIf predicate. See the settings.gradle.kts file.
 
-plugin.app.cash.licensee=1.11.0
+plugin.app.cash.licensee=1.12.0
 
 plugin.app.cash.paparazzi=1.3.1-thumbnail-scale-5
 ##            # available=1.3.2
 ##            # available=1.3.3
+##            # available=1.3.4
 
-version.app.cash.licensee=1.11.0
+version.app.cash.licensee=1.12.0
 
 plugin.org.jmailen.kotlinter=4.3.0
+##               # available=4.4.0
+##               # available=4.4.1
 
 version.junit.junit=4.13.2
 
-version.com.google.truth.extensions..truth-java8-extension=1.4.2
+version.com.google.truth.extensions..truth-java8-extension=1.4.4
 
-version.com.google.truth..truth=1.4.2
+version.com.google.truth..truth=1.4.4
 
-version.kotlinx.collections.immutable=0.3.7
+version.kotlinx.collections.immutable=0.3.8
 
-version.org.jsoup..jsoup=1.17.2
+version.org.jsoup..jsoup=1.18.1
 
 version.retrofit2=2.11.0
 
@@ -36,14 +39,13 @@ version.org.jacoco..org.jacoco.ant=0.8.8
 
 version.moshi=1.15.1
 
-version.kotlin=1.9.23
-## # available=1.9.24
+version.kotlin=2.0.21
 
 version.jakewharton.timber=5.0.1
 
-version.io.nlopez.compose.rules..ktlint=0.3.20
+version.io.nlopez.compose.rules..ktlint=0.4.17
 
-version.google.android.play-services-location=21.2.0
+version.google.android.play-services-location=21.3.0
 
 version.google.accompanist=0.24.1-alpha
 ##             # available=0.25.0
@@ -55,31 +57,32 @@ version.google.accompanist=0.24.1-alpha
 ##             # available=0.30.1
 ##             # available=0.32.0
 ##             # available=0.34.0
+##             # available=0.36.0
 
-version.dev.burnoo..compose-remember-preference=1.0.2
+version.dev.burnoo..compose-remember-preference=1.1.0
 
 version.com.github.ajalt..timberkt=1.5.1
 
-version.androidx.navigation=2.7.7
+version.androidx.navigation=2.8.3
 
-version.androidx.lifecycle=2.7.0
+version.androidx.lifecycle=2.8.7
 
 version.androidx.core-splashscreen=1.0.1
 
-version.androidx.core=1.13.1
+version.androidx.core=1.15.0
 
-version.androidx.compose.ui=1.6.7
+version.androidx.compose.ui=1.7.5
 
-version.androidx.compose.material3=1.2.1
+version.androidx.compose.material3=1.3.1
 
-version.androidx.compose.material=1.6.7
-
-version.androidx.compose.compiler=1.5.13
-
-version.androidx.activity=1.9.0
-
-plugin.com.google.devtools.ksp=1.9.23-1.0.20
-##                 # available=1.9.24-1.0.20
+version.androidx.compose.material=1.7.5
 
 ## unused
-plugin.android=8.4.0
+version.androidx.compose.compiler=1.5.15
+
+version.androidx.activity=1.9.3
+
+plugin.com.google.devtools.ksp=2.0.21-1.0.26
+
+## unused
+plugin.android=8.7.2
