--- a/serverless/path-summarize-alerts/package.json
+++ b/serverless/path-summarize-alerts/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "serverless-iam-roles-per-function": "^3.2.0",
+    "serverless-offline": "^14.3.4",
     "serverless-python-requirements": "^6.1.1"
   }
 }
