--- a/serverless/path-summarize-alerts/serverless.yml
+++ b/serverless/path-summarize-alerts/serverless.yml
@@ -61,6 +61,7 @@ package:
 plugins:
   - serverless-python-requirements
   - serverless-iam-roles-per-function
+  - serverless-offline
 
 resources:
   Resources:
