--- a/versions.properties
+++ b/versions.properties
@@ -15,12 +15,14 @@ plugin.app.cash.paparazzi=1.3.1-thumbnail-scale-5
 ##            # available=1.3.2
 ##            # available=1.3.3
 ##            # available=1.3.4
+##            # available=1.3.5
 
 version.app.cash.licensee=1.12.0
 
 plugin.org.jmailen.kotlinter=4.3.0
 ##               # available=4.4.0
 ##               # available=4.4.1
+##               # available=4.5.0
 
 version.junit.junit=4.13.2
 
@@ -30,7 +32,7 @@ version.com.google.truth..truth=1.4.4
 
 version.kotlinx.collections.immutable=0.3.8
 
-version.org.jsoup..jsoup=1.18.1
+version.org.jsoup..jsoup=1.18.2
 
 version.retrofit2=2.11.0
 
@@ -40,10 +42,11 @@ version.org.jacoco..org.jacoco.ant=0.8.8
 version.moshi=1.15.1
 
 version.kotlin=2.0.21
+## # available=2.1.0
 
 version.jakewharton.timber=5.0.1
 
-version.io.nlopez.compose.rules..ktlint=0.4.17
+version.io.nlopez.compose.rules..ktlint=0.4.19
 
 version.google.android.play-services-location=21.3.0
 
@@ -63,7 +66,7 @@ version.dev.burnoo..compose-remember-preference=1.1.0
 
 version.com.github.ajalt..timberkt=1.5.1
 
-version.androidx.navigation=2.8.3
+version.androidx.navigation=2.8.4
 
 version.androidx.lifecycle=2.8.7
 
@@ -82,7 +85,9 @@ version.androidx.compose.compiler=1.5.15
 
 version.androidx.activity=1.9.3
 
-plugin.com.google.devtools.ksp=2.0.21-1.0.26
+plugin.com.google.devtools.ksp=2.0.21-1.0.28
+##                 # available=2.1.0-1.0.28
+##                 # available=2.1.0-1.0.29
 
 ## unused
 plugin.android=8.7.2
