--- a/serverless/path-summarize-alerts/serverless.yml
+++ b/serverless/path-summarize-alerts/serverless.yml
@@ -35,6 +35,10 @@ provider:
     LOG_LEVEL: INFO
     OPENAI_API_KEY: ${file(./config.yml):OPENAI_API_KEY}
     SKIP_CACHE_MAGIC_WORD: ${file(./config.yml):SKIP_CACHE_MAGIC_WORD}
+    LANGCHAIN_TRACING_V2: ${file(./config.yml):LANGCHAIN_TRACING_V2}
+    LANGCHAIN_ENDPOINT: ${file(./config.yml):LANGCHAIN_ENDPOINT}
+    LANGCHAIN_API_KEY: ${file(./config.yml):LANGCHAIN_API_KEY}
+    LANGCHAIN_PROJECT: ${file(./config.yml):LANGCHAIN_PROJECT}
 
 functions:
   summarize:
