--- a/versions.properties
+++ b/versions.properties
@@ -11,11 +11,7 @@
 
 plugin.app.cash.licensee=1.12.0
 
-plugin.app.cash.paparazzi=1.3.1-thumbnail-scale-5
-##            # available=1.3.2
-##            # available=1.3.3
-##            # available=1.3.4
-##            # available=1.3.5
+plugin.app.cash.paparazzi=1.3.5
 
 version.app.cash.licensee=1.12.0
 
