--- a/versions.properties
+++ b/versions.properties
@@ -19,6 +19,8 @@ plugin.org.jmailen.kotlinter=4.3.0
 ##               # available=4.4.0
 ##               # available=4.4.1
 ##               # available=4.5.0
+##               # available=5.0.0
+##               # available=5.0.1
 
 version.junit.junit=4.13.2
 
@@ -28,21 +30,21 @@ version.com.google.truth..truth=1.4.4
 
 version.kotlinx.collections.immutable=0.3.8
 
-version.org.jsoup..jsoup=1.18.2
+version.org.jsoup..jsoup=1.18.3
 
 version.retrofit2=2.11.0
 
 ## unused
 version.org.jacoco..org.jacoco.ant=0.8.8
 
-version.moshi=1.15.1
+version.moshi=1.15.2
 
 version.kotlin=2.0.21
 ## # available=2.1.0
 
 version.jakewharton.timber=5.0.1
 
-version.io.nlopez.compose.rules..ktlint=0.4.19
+version.io.nlopez.compose.rules..ktlint=0.4.22
 
 version.google.android.play-services-location=21.3.0
 
@@ -57,12 +59,13 @@ version.google.accompanist=0.24.1-alpha
 ##             # available=0.32.0
 ##             # available=0.34.0
 ##             # available=0.36.0
+##             # available=0.37.0
 
 version.dev.burnoo..compose-remember-preference=1.1.0
 
 version.com.github.ajalt..timberkt=1.5.1
 
-version.androidx.navigation=2.8.4
+version.androidx.navigation=2.8.5
 
 version.androidx.lifecycle=2.8.7
 
@@ -70,11 +73,11 @@ version.androidx.core-splashscreen=1.0.1
 
 version.androidx.core=1.15.0
 
-version.androidx.compose.ui=1.7.5
+version.androidx.compose.ui=1.7.6
 
 version.androidx.compose.material3=1.3.1
 
-version.androidx.compose.material=1.7.5
+version.androidx.compose.material=1.7.6
 
 ## unused
 version.androidx.compose.compiler=1.5.15
@@ -86,4 +89,4 @@ plugin.com.google.devtools.ksp=2.0.21-1.0.28
 ##                 # available=2.1.0-1.0.29
 
 ## unused
-plugin.android=8.7.2
+plugin.android=8.7.3
