Fix long titles issue

--- a/.gitignore
+++ b/.gitignore
@@ -318,3 +318,5 @@ obj/
 # End of https://www.toptal.com/developers/gitignore/api/android,androidstudio,java,kotlin,intellij
 
 gradlew.bat
+
+.kotlin/sessions
