--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -31,4 +31,4 @@ jobs:
       run: uv sync --all-extras --dev --directory serverless/path-summarize-alerts/
 
     - name: "Compile python code"
-      run: uv run flake8 serverless/path-summarize-alerts/src --count --select=E9,F63,F7,F82 --show-source --statistics
+      run: uv --directory serverless/path-summarize-alerts/ run flake8 src --count --select=E9,F63,F7,F82 --show-source --statistics
