--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -30,5 +30,8 @@ jobs:
     - name: Install the project
       run: uv sync --all-extras --dev --directory serverless/path-summarize-alerts/
 
-    - name: "Compile python code"
+    - name: "Compile python code with flake8"
       run: uv --directory serverless/path-summarize-alerts/ run flake8 src --count --select=E9,F63,F7,F82 --show-source --statistics
+
+    - name: "Check python formatting with black"
+      run: uv --directory serverless/path-summarize-alerts/ run black . --check
